Multithreading
added Multithreading
added evaluation